[package]
name = "skytemple_rust"
version = "1.3.4"
authors = ["Marco 'Capypara' Köpcke <hello@capypara.de>"]
edition = "2021"
repository = "https://github.com/SkyTemple/skytemple-rust"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]
name = "skytemple_rust"

[features]
default = [
    "python", "strings", "compression", "image",
    "kao", "map_bg", "dungeon_graphics", "misc_graphics", "dse",
    "with_pmd_wan"
]
# non default: romfs

python = ["pyo3", "pyo3-log"]

strings = ["encoding-index-singlebyte"]
compression = []
image = []

kao = ["compression", "image", "arr_macro"]
map_bg = ["compression", "image"]
misc_graphics = ["image"]
dungeon_graphics = ["image"]
dse = ["chrono"]

with_pmd_wan = ["pmd_wan", "anyhow", "python"]

romfs = ["nitro_fs", "memmap"]

[dependencies]
skytemple_rust_macros = { path = "skytemple_rust_macros" }
pyo3 = { version = "0.15", features = ["extension-module"], optional = true }
pyo3-log = { version = "0.5", optional = true }
itertools = "0.10"
log = "0.4"
bytes = "1"
num-traits = "0.2"
num-derive = "0.3"
arr_macro = { version = "0.1.3", optional = true }
encoding = "0.2"
encoding-index-singlebyte = { version = "1", optional = true }
chrono = { version = "0.4", optional = true }
pmd_wan = { version = "4.0.0", optional = true }
anyhow = { version = "1", optional = true }
nitro_fs = { version = "0.1", optional = true }
memmap = { version = "0.7", optional = true }

# gettext-rs is not supported under Windows (native)
[target.'cfg( not(target_env = "msvc") )'.dependencies]
gettext-rs = "0.7"
