[package]
name = "skytemple_rust"
version = "1.6.0"
authors = ["Marco 'Capypara' Köpcke <hello@capypara.de>"]
edition = "2021"
repository = "https://github.com/SkyTemple/skytemple-rust"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]
name = "skytemple_rust"

[features]
default = [
    "python", "strings", "compression", "image",
    "sir0", "kao", "map_bg", "dungeon_graphics", "misc_graphics", "dse",
    "md", "item_p", "waza_p", "mappa_bin",
    "with_pmd_wan", "script_var_table"
]
# non default: romfs

python = ["pyo3", "pyo3-log"]

strings = ["encoding-index-singlebyte"]
compression = []
image = []

sir0 = ["anyhow"]
kao = ["compression", "image", "arr_macro"]
map_bg = ["compression", "image"]
misc_graphics = ["image"]
dungeon_graphics = ["image", "sir0"]
dse = ["time"]
md = ["packed_struct"]
item_p = ["packed_struct", "sir0"]
waza_p = ["packed_struct", "sir0", "md"]
mappa_bin = ["packed_struct", "sir0"]
script_var_table = ["packed_struct"]

with_pmd_wan = ["pmd_wan", "anyhow", "python"]

romfs = ["nitro_fs", "memmap2", "strings"]

[dependencies]
skytemple_rust_macros = { path = "skytemple_rust_macros" }
skytemple_rust_macros_no_py = { path = "skytemple_rust_macros_no_py" }
pyo3 = { version = "0.19", features = ["extension-module"], optional = true }
pyo3-log = { version = "0.8", optional = true }
itertools = "0.11"
log = "0.4"
bytes = "1"
num-traits = "0.2"
num-derive = "0.4"
paste = "1.0"
arr_macro = { version = "0.2", optional = true }
encoding = "0.2"
encoding-index-singlebyte = { version = "1", optional = true }
time = { version = "0.3.28", optional = true }
pmd_wan = { version = "5.1.1", optional = true }
anyhow = { version = "1", optional = true }
thiserror = "1"
nitro_fs = { version = "0.2", optional = true }
memmap2 = { version = "0.7", optional = true }
packed_struct = { version = "0.10", optional = true }

# gettext-rs is not supported under Windows (native)
[target.'cfg( not(target_env = "msvc") )'.dependencies]
gettext-rs = "0.7"
