[package]
name = "skytemple_rust"
version = "1.8.4"
authors = ["Marco 'Capypara' Köpcke <hello@capypara.de>"]
edition = "2021"
repository = "https://github.com/SkyTemple/skytemple-rust"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]
name = "skytemple_rust"

[features]
default = [
    "strings", "compression", "image",
    "sir0", "kao", "map_bg", "dungeon_graphics", "misc_graphics",
    "md", "item_p", "waza_p", "mappa_bin",
    "with_pmd_wan", "script_var_table"
]
# non default: romfs

strings = ["encoding-index-singlebyte"]
compression = []
image = []

sir0 = ["anyhow"]
kao = ["compression", "image"]
map_bg = ["compression", "image"]
misc_graphics = ["image"]
dungeon_graphics = ["image", "sir0"]
md = ["packed_struct"]
item_p = ["packed_struct", "sir0"]
waza_p = ["packed_struct", "sir0", "md"]
mappa_bin = ["packed_struct", "sir0"]
script_var_table = ["packed_struct"]

with_pmd_wan = ["pmd_wan", "anyhow"]

romfs = ["nitro_fs", "memmap2", "strings"]

[dependencies]
skytemple_rust_macros = { path = "skytemple_rust_macros" }
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-log = { version = "0.12" }
itertools = "0.13"
log = "0.4"
bytes = "1"
num-traits = "0.2"
num-derive = "0.4"
paste = "1.0"
encoding = "0.2"
encoding-index-singlebyte = { version = "1", optional = true }
pmd_wan = { version = "5.1", optional = true }
anyhow = { version = "1", optional = true }
thiserror = "2"
nitro_fs = { version = "0.2", optional = true }
memmap2 = { version = "0.9", optional = true }
packed_struct = { version = "0.10", optional = true }
parking_lot = "0.12"
enum_dispatch = "0.3"

# gettext-rs is not supported under Windows (native)
[target.'cfg( not(target_env = "msvc") )'.dependencies]
# TODO: 0.7.1 removed gettext macro.
gettext-rs = { version = "=0.7.0", features = ["gettext-system"] }
