[package]
name = "skytemple_rust_macros_no_py"
version = "1.4.0"
authors = ["Marco 'Capypara' Köpcke <hello@capypara.de>"]
edition = "2018"
repository = "https://github.com/SkyTemple/skytemple-rust"
license = "GPL-3.0-or-later"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
